Various small edits related to missing references
TODO: Kim: What is lefmann05 about virtual experiments exactly? Please insert something in the mcstas.bib .

cussen -> Cussen03 in divpos_monitor.tex - Correct?


git-svn-id: https://svn.mccode.org/svn/McStasTeX@126 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/divpos_monitor.tex
+++ b/trunk/divpos_monitor.tex
@@ -21,6 +21,6 @@ I(x,\eta_{\rm h}), M_2(x,\eta_{\rm h})$.
 The arrays are written to a file and can be read e.g. by the tool
 {\bf MC\_plot}, see the system manual.
 
-This component can be used for measuring acceptance diagrams \cite{cussen}.
+This component can be used for measuring acceptance diagrams \cite{Cussen03}.
 {\bf PSD\_monitor} can easily be changed into being sensitive
 to $y$ and vertical divergence by a 90 degree rotation around the $z$-axis.
