--- a/trunk/instrum.tex
+++ b/trunk/instrum.tex
@@ -183,8 +183,8 @@ Collimations: open-30'-open-open.}
 \end{figure}
 
 In contrast, a simulated $2\theta_a$ scan in triple-axis 
-mode on a V-sample showed a surprising offset from 0 degrees, see
-Figure \ref{f:v_2ta_offset}. However, a simulation with a PSD
+mode on a V-sample showed a surprising offset from 0 degrees.
+However, a simulation with a PSD
 on the sample position showed that the beam center was 1.5~mm
 off from the center of the sample, and this was important
 since the beam was no wider than the sample itself.
