--- a/trunk/intro.tex
+++ b/trunk/intro.tex
@@ -72,8 +72,8 @@ container, the sample environment, and generally the instrument itself
 signal ? Most of the time, the physicist will elude these questions
 using rough approximations, or applying analytical corrections
 \cite{Copley86}. Monte-Carlo techniques provide a mean to evaluate
-some of these quantities. The techincalities of Monte-Carlo simulation
-techniques are explained in detail in Chapter \ref{c:MCtechniques}.
+some of these quantities. The technicalities of Monte-Carlo simulation
+techniques are explained in detail in Chapter \ref{s:MCtechniques}.
 
 
 \subsection{The goals of \MCS}
