--- a/trunk/mcstas.bib
+++ b/trunk/mcstas.bib
@@ -393,3 +393,10 @@
    year      = {1983},
    volume    = {83BL21G}
 }
+
+@article{lefmann05,
+   author    = {K. Lefmann},
+   journal   = {?},
+   year      = {2005},
+   volume    = {?}
+}
