lefmann05 reference removed
git-svn-id: https://svn.mccode.org/svn/McStasTeX@127 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/techniq.tex
+++ b/trunk/techniq.tex
@@ -69,7 +69,7 @@ and generally the optimum parameter set, benefit advantageously from MC methods.
 
 Recently, the concept of virtual experiments, {\em i.e.}\ full simulations
 of a complete neutron experiment, has been suggested as the main
-goal for neutron ray-tracing simulations \cite{lefmann05}. The goal is that
+goal for neutron ray-tracing simulations. The goal is that
 simulations should be of benefit to not only instrument builders, but also
 to users for training, experiment planning, diagnostics, and data analysis.
 
