--- a/trunk/mcstas.bib
+++ b/trunk/mcstas.bib
@@ -394,3 +394,11 @@
    volume    = {83BL21G}
 }
 
+@article{fischer05,
+   author    = {H.E. Fischer and A.C. Barnes and P.S. Salmon},
+   journal   = {Rep. Prog. Phys.},
+   year      = {2005},
+   volume    = {69},
+   pages     = {233}
+}
+
