--- a/trunk/kernelcalls.tex
+++ b/trunk/kernelcalls.tex
@@ -101,7 +101,7 @@ the neutron rays which have negative propagation times are removed automatically
 \index{Library!Run-time!RESTORE\_NEUTRON}
 \index{Library!Run-time!SCATTERED}
 \begin{itemize}
-\item {\bf MC\_GETPAR}(). This may be used in the FINALLY section of an
+\item {\bf MC\_GETPAR}$(comp, outpar)$. This may be used in e.g. the FINALLY section of an
   instrument definition to reference the output parameters of a
   component.
 % See page~\pageref{mcgetpar} for details.
