*** empty log message ***
git-svn-id: https://svn.mccode.org/svn/McStasTeX@130 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/optics.tex
+++ b/trunk/optics.tex
@@ -49,6 +49,7 @@ and velocity selector used for partially monochromatize continuous beams.
 
 \newpage
 \input{v_selector}
+\input{selector}
 
 % there follows a chapter
 \newpage
