Added table of common materials in 'data files' section
git-svn-id: https://svn.mccode.org/svn/McStasTeX@132 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/comp.tex
+++ b/trunk/comp.tex
@@ -136,6 +136,71 @@ File extensions are not compulsory but help in identifying relevant files per ap
   \end{center}
 \end{table}
 
+\begin{table}
+  \begin{center}
+    {\let\my=\\
+    \begin{small}
+    \begin{tabular}{|l|rrr|rr|p{0.2\textwidth}|}
+
+      \hline
+      {\bf MCSTAS/data} & $\sigma_{coh}$&$\sigma_{inc}$&$\sigma_{abs}$&$T_m$       & $c$    & Note \\
+          File name     & [barns]     & [barns]    & [barns]    & [K]        & [m/s] & \\
+      \hline
+Ag.laz             & 4.407     & 0.58     &{\bf 63.3}      &1234.9    &2600&\\
+Al2O3\_sapphire.laz & 15.683    & 0.0188   &0.4625    &2273      &   &\\
+Al.laz             & 1.495     & 0.0082   &0.231     &933.5     &5100& .lau\\
+Au.laz             & 7.32      & 0.43     &{\bf 98.65}     &1337.4    &{\bf 1740}&\\
+B4C.laz            & 19.71     & 6.801    &{\bf 3068}      &2718      &     &\\
+Ba.laz             & 3.23      & 0.15     &29.0      &1000      &{\bf 1620}&\\
+Be.laz             & 7.63      & 0.0018   &0.0076    &1560      &13000&\\
+BeO.laz            & 11.85     & 0.003    &0.008     &2650      &   & .lau\\
+Bi.laz             & 9.148     & 0.0084   &0.0338    &544.5     &{\bf 1790}&\\
+C60.lau            & 5.551     & 0.001    &0.0035    &          &   &\\
+C\_diamond.laz      & 5.551     & 0.001    &0.0035    &4400      &18350 & .lau\\
+C\_graphite.laz     & 5.551     & 0.001    &0.0035    &3800      &18350 & .lau\\
+Cd.laz             & 3.04      & 3.46     &{\bf 2520}      &594.2     &2310&\\
+Cr.laz             & 1.660     & 1.83     &3.05      &2180      &5940&\\
+Cs.laz             & 3.69      & 0.21     &29.0      &301.6     &{\bf 1090}  & $c$ in liquid\\
+Cu.laz             & 7.485     & 0.55     &3.78      &1357.8    &3570&\\
+Fe.laz             & 11.22     & 0.4      &2.56      &1811      &4910&\\
+Ga.laz             & 6.675     & 0.16     &2.75      &302.91    &2740&\\
+Gd.laz             & 29.3      & 151      &{\bf 49700}     &1585      &2680&\\
+Ge.laz             & 8.42      & 0.18     &2.2       &1211.4    &5400  & Ge\_liq\_coh.sqw and Ge\_liq\_inc.sqw\\
+H2O\_ice\_1h.laz     & 7.75      & 160.52   &0.6652    &273       &     &\\
+He4\_liq\_coh.sqw    & 1.34      & 0        &0.00747   &0         &   & $S(q,\omega)$ data\\
+Hg.laz             & 20.24     & 6.6      &{\bf 372.3}     &234.32    &{\bf 1407}&\\
+I2.laz             & 7.0       & 0.62     &12.3      &386.85    &   &\\
+In.laz             & 2.08      & 0.54     &{\bf 193.8}     &429.75    &{\bf 1215}&\\
+K.laz              & .69       & 0.27     &2.1       &336.53    &{\bf 2000}&\\
+LiF.laz            & 4.46      & 0.921    &{\bf 70.51}     &1140      &   &\\
+Li.laz             & 0.454     & 0.92     &{\bf 70.5}      &453.69    &6000&\\
+Nb.laz             & 8.57      & 0.0024   &1.15      &2750      &3480&\\
+Ni.laz             & 13.3      & 5.2      &4.49      &1728      &4970&\\
+Pb.laz             & 11.115    & 0.003    &0.171     &600.61    &{\bf 1260}&\\
+Pd.laz             & 4.39      & 0.093    &6.9       &1828.05   &3070&\\
+Pt.laz             & 11.58     & 0.13     &10.3      &2041.4    &2680&\\
+Rb.laz             & 6.32      & 0.5      &0.38      &312.46    &{\bf 1300}  & Rb\_liq\_coh.sqw and Rb\_liq\_inc.sqw\\
+Se\_alpha.laz       & 7.98      & 0.32     &11.7      &494       &3350&\\
+Se\_beta.laz        & 7.98      & 0.32     &11.7      &494       &3350&\\
+Si.laz             & 2.163     & 0.004    &0.171     &1687      &2200&\\
+SiO2\_quartza.laz   & 10.625    & 0.0056   &0.1714    &846       &      & .lau\\
+SiO2\_quartzb.laz   & 10.625    & 0.0056   &0.1714    &1140      &      & .lau\\
+Sn\_alpha.laz       & 4.871     & 0.022    &0.626     &505.08    &     &\\
+Sn\_beta.laz        & 4.871     & 0.022    &0.626     &505.08    &2500&\\
+Ti.laz             & 1.485     & 2.87     &6.09      &1941      &4140&\\
+Tl.laz             & 9.678     & 0.21     &3.43      &577       &{\bf 818}&\\
+V.laz              & .0184     & 4.935    &5.08      &2183      &4560&\\
+Zn.laz             & 4.054     & 0.077    &1.11      &692.68    &3700&\\
+Zr.laz             & 6.44      & 0.02     &0.185     &2128      &3800&\\
+      \hline
+    \end{tabular}\end{small}
+    \caption{Powders of the \MCS\ library \cite{icsd_ill,ILLblue}. Low $c$ and high $\sigma_{abs}$ materials are highlighted.}
+    \label{t:material-data}
+    \index{Library!Components!data}
+    }
+  \end{center}
+\end{table}
+
 \MCS\ itself generates both simulation and monitor data files, which structure is explained in the User Manual (see end of chapter 'Running \MCS\ ').
 
 \section{Component source code}
